--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
   "dependencies": {
     "@dfinity/agent": "^0.20.2",
     "@dfinity/candid": "^0.20.2",
-    "@dfinity/principal": "^0.20.2"
+    "@dfinity/principal": "^0.20.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "assert": "2.0.0",
+    "babel-loader": "^9.1.3",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
     "dotenv": "^16.0.3",
@@ -32,6 +39,7 @@
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "terser-webpack-plugin": "^5.3.3",
+    "ts-loader": "^9.5.1",
     "util": "0.12.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
